BIG UPDATE - pFFA 2.0