@@ -1,12 +1,15 @@
 package me.pafias.pffa.commands.subcommands;
 
-import me.pafias.pffa.commands.ICommand;
+import me.pafias.pffa.commands.BaseFFACommand;
+import me.pafias.pffa.objects.FfaData;
 import me.pafias.pffa.objects.User;
-import me.pafias.pffa.objects.UserConfig;
-import me.pafias.pffa.util.CC;
+import me.pafias.pffa.objects.UserData;
+import me.pafias.putils.BukkitPlayerManager;
+import me.pafias.putils.CC;
 import org.bukkit.OfflinePlayer;
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandSender;
+import org.bukkit.entity.Player;
 import org.jetbrains.annotations.NotNull;
 
 import java.util.Arrays;
@@ -14,9 +17,8 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 import java.util.concurrent.CompletableFuture;
-import java.util.stream.Collectors;
 
-public class StatsCommand extends ICommand {
+public class StatsCommand extends BaseFFACommand {
 
     public StatsCommand() {
         super("stats", "ffa.stats", "statistics");
@@ -36,62 +38,70 @@ public class StatsCommand extends ICommand {
 
     @Override
     public void execute(String mainCommand, CommandSender sender, String[] args) {
-        String targetName = sender.getName();
-        if (args.length == 2 && sender.hasPermission("ffa.stats.others"))
-            targetName = args[1];
-        sender.sendMessage(CC.t("&6Fetching data..."));
-        User target = plugin.getSM().getUserManager().getUser(targetName);
-        if (target != null) {
-            sender.sendMessage("");
-            sender.sendMessage(CC.t(String.format("&3---------- &9FFA Stats for &d%s &3----------", target.getName())));
-            sender.sendMessage(CC.t(String.format("&6Kills: &7%d", target.getKills())));
-            sender.sendMessage(CC.t(String.format("&6Deaths: &7%d", target.getDeaths())));
-            sender.sendMessage(CC.t(String.format("&6KDR: &7%.2f", target.getKDR())));
-            sender.sendMessage(CC.t(String.format("&6Current killstreak: &7%d", target.getCurrentKillstreak())));
-            sender.sendMessage(CC.t(String.format("&6Best killstreak: &7%d", target.getBestKillstreak())));
-            sender.sendMessage("");
-        } else {
-            String finalTargetName = targetName;
-            CompletableFuture.supplyAsync(() -> plugin.getServer().getOfflinePlayer(finalTargetName)).thenAccept(offlinePlayer -> {
-                if (!offlinePlayer.hasPlayedBefore())
-                    sender.sendMessage(CC.t("&cPlayer not found!"));
-                else {
-                    UserConfig config = new UserConfig(offlinePlayer.getUniqueId());
-                    config.exists().thenAccept(exists -> {
-                        if (!exists) {
-                            sender.sendMessage(CC.t("&cPlayer not found!"));
-                        } else {
-                            config.get("kills", "deaths", "killstreak").thenAccept(list -> {
-                                int kills = (int) list.get("kills");
-                                int deaths = (int) list.get("deaths");
-                                int ks = (int) list.get("killstreak");
-                                double kdr = kills / (double) (deaths == 0 ? 1 : deaths);
-                                sender.sendMessage("");
-                                sender.sendMessage(CC.t(String.format("&3---------- &9FFA Stats for &d%s &3----------", offlinePlayer.getName())));
-                                sender.sendMessage(CC.t(String.format("&6Kills: &7%d", kills)));
-                                sender.sendMessage(CC.t(String.format("&6Deaths: &7%d", deaths)));
-                                sender.sendMessage(CC.t(String.format("&6KDR: &7%.2f", kdr)));
-                                sender.sendMessage(CC.t(String.format("&6Best killstreak: &7%d", ks)));
-
-                                sender.sendMessage("");
-                            });
-                        }
-                    });
-                }
-            });
+        if (args.length == 1 && !(sender instanceof Player)) {
+            sender.sendMessage(CC.t("&cOnly players."));
+            return;
         }
+        final String targetName;
+        if (args.length == 2 && sender.hasPermission(getPermission() + ".others"))
+            targetName = args[1];
+        else
+            targetName = sender.getName();
+        sender.sendMessage(CC.t("&6Fetching data..."));
+        CompletableFuture.supplyAsync(() -> BukkitPlayerManager.getOfflinePlayerByInput(targetName))
+                .thenAccept(offlinePlayer -> {
+                    if (offlinePlayer == null) {
+                        sender.sendMessage(CC.t("&cPlayer not found!"));
+                        return;
+                    }
+                    if (offlinePlayer.isOnline()) {
+                        User user = plugin.getSM().getUserManager().getUser(offlinePlayer.getUniqueId());
+                        if (user == null) {
+                            sender.sendMessage(CC.t("&cPlayer not found!"));
+                            return;
+                        }
+                        sender.sendMessage(CC.multiLine(
+                                "",
+                                CC.af("&3---------- &9FFA Stats for &d%s &3----------", user.getName()),
+                                CC.af("&6Kills: &7%d", user.getKills()),
+                                CC.af("&6Deaths: &7%d", user.getDeaths()),
+                                CC.af("&6KDR: &7%.2f", user.getKDR()),
+                                CC.af("&6Current killstreak: &7%d", user.getCurrentKillstreak()),
+                                CC.af("&6Best killstreak: &7%d", user.getBestKillstreak()),
+                                ""
+                        ));
+                    } else {
+                        UserData userData = plugin.getSM().getUserDataStorage().getUserData(offlinePlayer.getUniqueId().toString());
+                        if (userData == null) {
+                            sender.sendMessage(CC.t("&cNo data found on this player."));
+                            return;
+                        }
+                        FfaData ffaData = userData.getFfaData();
+                        sender.sendMessage(CC.multiLine(
+                                "",
+                                CC.af("&3---------- &9FFA Stats for &d%s &3----------", offlinePlayer.getName()),
+                                CC.af("&6Kills: &7%d", ffaData.getKills()),
+                                CC.af("&6Deaths: &7%d", ffaData.getDeaths()),
+                                CC.af("&6KDR: &7%.2f", ffaData.getKDR()),
+                                CC.af("&6Best killstreak: &7%d", ffaData.getKillstreak()),
+                                ""
+                        ));
+                    }
+                });
     }
 
     @Override
     public List<String> tabComplete(CommandSender sender, Command command, String alias, String[] args) {
-        if (args.length >= 3) return Collections.emptyList();
-        if (!sender.hasPermission("ffa.stats.others")) return Collections.emptyList();
-        if (args[1].length() < 4) return Collections.singletonList("Type at least 4 letters to auto-complete");
-        return Arrays.stream(plugin.getServer().getOfflinePlayers())
-                .map(OfflinePlayer::getName)
-                .filter(Objects::nonNull)
-                .filter(s -> s.toLowerCase().startsWith(args[1].toLowerCase()))
-                .collect(Collectors.toList());
+        if (args.length == 2 && sender.hasPermission(getPermission() + ".others")) {
+            if (args[1].length() < 4)
+                return Collections.singletonList("Type at least 4 letters to auto-complete");
+            return Arrays.stream(plugin.getServer().getOfflinePlayers())
+                    .map(OfflinePlayer::getName)
+                    .filter(Objects::nonNull)
+                    .filter(s -> s.toLowerCase().startsWith(args[1].toLowerCase()))
+                    .toList();
+        }
+        return Collections.emptyList();
     }
 
 }
